Fix code styling and sweet scrollbar in Chrome

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -22,5 +22,6 @@
     overflow-y: auto;
     flex-shrink: 1;
     min-height: 0;
+    padding-right: 5px;
   }
 }
